@@ -1,0 +1,10 @@
+<html>
+<body>
+<form action="">
+<input type="text">
+</form>
+<iframe src="test.htm" width="100%"/>
+<iframe src="test2.htm" width="100%"/>
+<iframe src="frames.htm" width="100%"/>
+</body>
+</html>
